crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__function__local_mutual_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/local_mutual_recursion.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (fun isEven @1 [n]
         (block
            (if
               (== (local n @0) 0.0)
               (return true)
               ∅)
            (return (call +1 (global-by-name isOdd) (- (local n @0) 1.0)))))
      (fun isOdd @2 [n]
         (block
            (if
               (== (local n @0) 0.0)
               (return false)
               ∅)
            (return (call +1 (global isEven @1) (- (local n @0) 1.0)))))
      (expr (call +3 (local isEven @1) 4.0))))

----- stderr -----
