crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__function__local_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/local_recursion.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (fun fib (cell @0) [n] [Some(0)]
         (block
            (if
               (< (local n @0) 2.0)
               (return (local n @0))
               ∅)
            (return (+ (call +1 (cell fib @0) (- (local n @0) 1.0)) (call +1 (cell fib @0) (- (local n @0) 2.0))))))
      (print (call +1 (cell fib @0) 8.0))))

----- stderr -----
