crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__function__mutual_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/mutual_recursion.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun isEven (global @1) [(local n @0)] []
      (block
         (if
            (== (local n @0) 0.0)
            (return true)
            ∅)
         (return (call +1 (global-by-name isOdd) (- (local n @0) 1.0)))))
   (fun isOdd (global @2) [(local n @0)] []
      (block
         (if
            (== (local n @0) 0.0)
            (return false)
            ∅)
         (return (call +1 (global isEven @1) (- (local n @0) 1.0)))))
   (print (call +3 (global isEven @1) 4.0))
   (print (call +3 (global isOdd @2) 3.0)))

----- stderr -----
