crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__function__nested_call_with_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/nested_call_with_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun returnArg (global @1) [arg] []
      (block
         (return (local arg @0))))
   (fun returnFunCallWithArg (global @2) [func arg] []
      (block
         (return (call +2 (call +2 (global returnArg @1) (local func @0)) (local arg @1)))))
   (fun printArg (global @3) [arg] []
      (block
         (print (local arg @0))))
   (expr (call +4 (global returnFunCallWithArg @2) (global printArg @3) "hello world")))

----- stderr -----
